##
# setup.cfg for gripe
# Read more about the various options under:
#   https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#   https://setuptools.pypa.io/en/latest/references/keywords.html
##
[metadata]
name = gripe
description = Shell helper utilities for python
author = elo
#author_email = info@elo-enterprises
platforms = any
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/elo-enterprises/gripe/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/elo-enterprises/gripe/
    Source = https://github.com/elo-enterprises/gripe/
    Download = https://github.com/elo-enterprises/gripe/#files

# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >3.7

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
  grip==4.6.1
  psutil==5.9.5
  fleks>=2024.2.9.23.58

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# installed via `pip install .[dev]`
dev =
    IPython

# NB: This section is used by CI, via `make test`, which invokes tox.  See also `tox.ini`
# installed via `pip install .[testing]`
testing =
    IPython
    tox
    pytest
    pytest-cov
    mock
    flake8==5.0.4

# NB: This section is used by CI, via `make static-analysis`.  See also `Makefile`
# Installed via `pip install .[lint]`.
lint =
    tox

# NB: This section is used by CI, via `make publish`.  See also `Makefile`
# installed via `pip install .[publish]`
publish =
    twine

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
     gripe = gripe.bin:entry


[tool:pytest]
addopts =
    --cov gripe --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
